# manifester

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  manifester_settings.yaml.example  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  python-publish.yml  update_manifester_image.yml
manifester/: __init__.py  _settings.py  commands.py  helpers.py  logger.py  manifester.py  settings.py
scripts/: vault_login.py
tests/: test_manifester.py
