[metadata]
name = manifester
description = Manifester dynamically generates subscription manifests using the Red Hat Subscription Managament API.
long_description = file: README.md
long_description_content_type = text/markdown
author = Danny Synk
author_email = dsynk@redhat.com
url = https://github.com/SatelliteQE/manifester
license = Apache
keywords = rhsm, red hat
classifiers =
    Development Status :: 1 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
install_requires =
    click
    dynaconf>=3.1.0
    logzero
    pyyaml
    requests
    setuptools
packages = find:
zip_safe = False

[options.extras_require]
test = pytest
setup =
    setuptools
    setuptools-scm
    wheel
    twine

[options.entry_points]
console_scripts =
    manifester = manifester.commands:cli
